syntax="proto3";

import "user_msg.proto";

option go_package = "./user";

service UserService {
    rpc GetUserInfo(GetUserInfoReq) returns(GetUserInfoRes) {};
    rpc DeleteUserInfo(DeleteUserInfoReq) returns(DeleteUserInfoRes) {};
    rpc CreateUserInfo(CreateUserInfoReq) returns(CreateUserInfoRes) {};
    rpc ModifyUserInfo(ModifyUserInfoReq) returns(ModifyUserInfoRes) {};

    rpc GetUserInfoByID(GetUserInfoByIDReq) returns(GetUserInfoByIDRes) {};
}
